# cspy

./: .CHANGELOG.md.swo  .buildinfo  .clang-format  .cmake-format.py  .dockerignore  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  Makefile  README.md  action.yml  objects.inv  readthedocs.yml  requirements.dev.txt  requirements.txt  search.html  setup.py  setup.py.in
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cpp.yml  docs.yml  dotnet.yml  dotnet_release.yml  macos_cpp.yml  macos_dotnet.yml  macos_python.yml  pypi_release.yml  python.yml  release.yml  ubuntu.yml  ubuntu_cpp.yml  ubuntu_docs.yml  ubuntu_dotnet.yml  ubuntu_python.yml  ubuntu_python_release.yml  windows_cpp.yml  windows_dotnet.yml  windows_python.yml
_sources/: ref.rst.txt
benchmarks/: README.md
benchmarks/beasley_christofides_1989/: rcsp1.txt  rcsp11.txt  rcsp13.txt  rcsp14.txt  rcsp15.txt  rcsp16.txt  rcsp17.txt  rcsp18.txt  rcsp19.txt  rcsp2.txt  rcsp20.txt  rcsp21.txt  rcsp22.txt  rcsp5.txt  rcsp6.txt  rcsp8.txt  rcsp9.txt  results.txt
benchmarks/boost/: CMakeLists.txt  r_c_shortest_paths.cc
benchmarks/data/: rcsp10.txt  rcsp12.txt  rcsp23.txt  rcsp24.txt  rcsp3.txt  rcsp4.txt  rcsp7.txt
benchmarks/jl/: Manifest.toml  Project.toml  rcsp.jl
benchmarks/zhu_wilhelm_2013/: RCosts.txt  rcsp11.txt  rcsp11_0.txt  rcsp11_1.txt  rcsp11_10.txt  rcsp11_11.txt  rcsp11_12.txt  rcsp11_13.txt  rcsp11_14.txt  rcsp11_15.txt  rcsp11_16.txt  rcsp11_17.txt  rcsp11_18.txt  rcsp11_19.txt  rcsp11_2.txt  rcsp11_20.txt  rcsp11_21.txt  rcsp11_22.txt  rcsp11_23.txt  rcsp11_24.txt  rcsp11_25.txt  rcsp11_26.txt  rcsp11_27.txt  rcsp11_28.txt  rcsp11_29.txt  rcsp11_3.txt  rcsp11_30.txt  rcsp11_31.txt  rcsp11_32.txt  rcsp11_33.txt  rcsp11_34.txt  rcsp11_35.txt  rcsp11_36.txt  rcsp11_37.txt  rcsp11_38.txt  rcsp11_39.txt  rcsp11_4.txt  rcsp11_40.txt  rcsp11_41.txt  rcsp11_42.txt  (+1173 more)
cc_api/: BiDirectional.html  REFCallback.html  Search.html  Vertex.html
cmake/: FindLEMON.cmake  cpp.cmake  cspyConfig.cmake.in  dotnet.cmake  python.cmake  swig.cmake  test.cmake
cspy/: __init__.py  algorithms.c  algorithms.py  algorithms.pyx  checking.py  checks.py  cython_setup.py  label.py  path.py  preprocessing.py  run_tests.py
cspy/algorithms/: bidirectional.py  bidirectional_search.py  grasp.py  greedy_elimination.py  label.py  path.py  path_base.py  psolgent.py  tabu.py
cspy/test/: .tests.py.swo  .tests.py.swp  __init__.py  tests.py
cspy/tests/: tests.py  tests_bidirectional.py  tests_examples.py  tests_grasp.py  tests_greedyelim.py  tests_preprocessing.py  tests_psolgent.py  tests_tabu.py
docs/: Doxyfile  build_docs.sh  conf.py  getting_started.rst  how_to.rst  index.rst  ref.rst  requirements.txt
docs/api/: cpp.rst  cspy.BiDirectional.rst  cspy.GRASP.rst  cspy.GreedyElim.rst  cspy.Label.rst  cspy.PSOLGENT.rst  cspy.Tabu.rst  cspy.check_and_preprocess.rst  cspy.preprocess_graph.rst  csy.preprocess_graph.rst
docs/cc_api/: BiDirectional.rst  DiGraph.rst  Label.rst  LabelExtension.rst  REFCallback.rst  Vertex.rst  params.rst  preprocessing.rst
docs/compiled/: index.js
docs/html/: CMakeLists_8txt.html  annotated.html  bidirectional_8cc.html  bidirectional_8cc__incl.dot  bidirectional_8cc__incl.md5  bidirectional_8h.html  bidirectional_8h__dep__incl.dot  bidirectional_8h__dep__incl.md5  bidirectional_8h__incl.dot  bidirectional_8h__incl.md5  bidirectional_8h_source.html  classbidirectional_1_1BiDirectional-members.html  classbidirectional_1_1BiDirectional.html  classbidirectional_1_1BiDirectional__coll__graph.dot  classbidirectional_1_1BiDirectional__coll__graph.md5  classbidirectional_1_1DiGraph-members.html  classbidirectional_1_1DiGraph.html  classbidirectional_1_1DiGraph__coll__graph.dot  classbidirectional_1_1DiGraph__coll__graph.md5  classbidirectional_1_1Params-members.html  (+120 more)
dotnet/: Directory.Build.props.in  Test.csproj.in  cspy.DN.csproj.in  cspy.Dotnet.csproj.in  cspy.Dotnet.runtime.csproj.in
paper/: paper.bib  paper.md
python/: requirements.dev.txt  setup.py.in
python_api/: cspy.BiDirectional.html  cspy.GRASP.html  cspy.Tabu.html  cspy.preprocess_graph.html
src/cc/: CMakeLists.txt  bidirectional.cc  bidirectional.h  config.h.in  digraph.cc  digraph.h  labelling.cc  labelling.h  params.h  preprocessing.cc  preprocessing.h  py_ref_callback.cc  py_ref_callback.h  ref_callback.cc  ref_callback.h  search.cc  search.h
src/cc/dotnet/: CMakeLists.txt  bidirectional.i
src/cc/python/: CMakeLists.txt  bidirectional.i
test/cc/: CMakeLists.txt  test_benchmarks.cc  test_benchmarks_boost.cc  test_bidirectional.cc  test_issue17.cc  test_issue22.cc  test_issue38.cc  test_issue41.cc  test_issue52.cc  test_issue69.cc  test_issue89.cc  test_issue90.cc  test_issue94.cc  test_labelling.cc  utils.cc
test/cc/src/: test_benchmarks.cc  test_benchmarks.h  test_benchmarks_boost.cc  test_benchmarks_boost.h  test_bidirectional.cc  test_bidirectional.h  test_issue17.cc  test_issue17.h  test_issue22.cc  test_issue22.h  test_issue38.cc  test_issue38.h  test_issue41.cc  test_issue41.h  test_issue52.cc  test_issue52.h  test_issue69.cc  test_issue69.h  test_issue90.cc  test_issue94.cc  test_labelling.cc  test_labelling.h  test_vrpy_issue_15.cc  utils.cc  utils.h
test_cc/: CMakeLists.txt
test_cc/src/: main.cc  test_benchmarks.cc  test_benchmarks.h  test_bidirectional.cc  test_bidirectional.h  test_issue17.cc  test_issue17.h  test_issue22.cc  test_issue22.h  test_issue38.cc  test_issue52.cc  test_issue52.h  test_labelling.cc  test_labelling.h
test_python/: example_ref.py  test.py  tests_greedy_elimination.py  tests_issue17.py  tests_issue20.py  tests_issue22.py  tests_issue25.py  tests_issue32.py  tests_issue41.py  tests_preprocessing.py  tests_psolgent.py
tests/: examples.py  test_example.py  tests_bidirectional.py  tests_grasp.py  tests_greedy_elimination.py  tests_issue17.py  tests_issue20.py  tests_issue22.py  tests_issue25.py  tests_issue32.py  tests_issue38.py  tests_issue41.py  tests_preprocessing.py  tests_psolgent.py  tests_tabu.py
(+300 files in other folders)
